--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,9 +43,9 @@ const sections = [
 
 	<section class="overflow-clip bg-blue-950 py-24">
 		<div class="gsap-text container grid max-w-xl gap-6">
-			<p>La vida es demasiado corta para no probar cosas nuevas. Es cierto que las personas somos seres de costumbres, pero también nos mueve la inquietud. Si lo piensas, ¡solo los valientes que se atreven a abrir nuevos caminos disfrutan primero de ese verdadero placer que supone vivir experiencias únicas e inolvidables! El resto viene después. Lo que está claro es que, si la idea la sacas de un reel, casi seguro estará ya masificada para cuando quieras llevar a cabo tú el plan…</p>
-			<p>De todas las estaciones del año, el verano es el mejor momento para ser tu mejor versión. En verano somos más libres, nos sentimos más ligeros. ¿Cuál es el auténtico reto? Lograr probar nuevas opciones pero manteniéndonos fieles a nosotros mismos.</p>
-			<p>Planes reales, auténticos, conscientes, creados por ti y disfrutados por quienes tú quieras. Sintiendo cada momento como si fuera el último. “La excelencia y mantenerse fiel a uno mismo siempre estarán a tu lado”, decía George Ballantine. Y tenía razón. Tú marcas las reglas. Esa debe ser la filosofía.</p>
+			<p>La vida es demasiado corta para no probar cosas nuevas. Es cierto que las personas somos seres de costumbres, pero también nos mueve la inquietud. Si lo piensas, ¡solo los valientes que se atreven a abrir nuevos caminos disfrutan primero de <strong>ese verdadero placer que supone vivir experiencias únicas e inolvidables!</strong> El resto viene después. Lo que está claro es que, si la idea la sacas de un reel, casi seguro estará ya masificada para cuando quieras llevar a cabo tú el plan…</p>
+			<p>De todas las estaciones del año, el verano es el mejor momento para ser tu mejor versión. En verano somos más libres, nos sentimos más ligeros. ¿Cuál es el auténtico reto? Lograr probar nuevas opciones pero manteniéndonos <strong>fieles a nosotros mismos.</strong></p>
+			<p>Planes reales, auténticos, conscientes, creados por ti y disfrutados por quienes tú quieras. Sintiendo cada momento como si fuera el último. “La excelencia y mantenerse fiel a uno mismo siempre estarán a tu lado”, decía George Ballantine. Y tenía razón. <strong>Tú marcas las reglas. Esa debe ser la filosofía.</strong></p>
 			<p>Vamos a inspirarnos un poco:</p>
 		</div>
 	</section>
