--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import SvgBallantines from '@/assets/icons/ballantines.svg'
 
 <footer class="bg-blue-975 py-12 text-center">
 	<div class="container">
-		<p class="mb-3 font-serif text-sm">Eltiempo Content para</p>
+		<p class="mb-3">Eltiempo Content para</p>
 
 		<SvgBallantines class="mx-auto w-48 fill-white" />
 
