--- a/src/components/BlockHero.astro
+++ b/src/components/BlockHero.astro
@@ -56,8 +56,8 @@ const { sections } = Astro.props
 		</div>
 
 		<div class="gsap-hero relative mb-6 max-w-160 text-balance">
-			<h1 class="font-display mx-auto max-w-[26rem] text-[3rem] leading-[2.5rem] font-bold text-white uppercase md:text-[3rem] md:tracking-[-5px]">Experiencias 10/10: un verano con tu mejor versión</h1>
-			<p class="my-3">Este verano, cada experiencia cuenta. Desde un showcooking con cocina de proximidad hasta un brindis al atardecer después de un baño en el mar. Vive momentos inolvidables junto a <a class="underline" target="_blank" href="https://www.ballantines.com/es-es/bebidas/">Ballantine’s</a> y con un enfoque más consciente</p>
+			<h1 class="font-display mx-auto max-w-[26rem] text-[3rem] leading-[2.75rem] font-bold text-white uppercase md:text-[3rem]">Experiencias 10/10: un verano con tu mejor versión</h1>
+			<p class="my-3">Este verano, cada experiencia cuenta. Desde un showcooking con cocina de proximidad hasta un brindis al atardecer después de un baño en el mar. Vive momentos inolvidables junto a <a class="underline" rel="sponsored" target="_blank" href="https://www.ballantines.com/es-es/bebidas/">Ballantine’s</a> y con un enfoque más consciente</p>
 			<a class="gsap-anchor mx-auto block w-4 animate-bounce" href="#down"><SvgArrow /></a>
 		</div>
 	</div>
