--- a/src/main.css
+++ b/src/main.css
@@ -11,7 +11,8 @@
 	font-style: normal;
 	font-weight: 700;
 	font-display: 'swap';
-	src: url(/interstate-condensed-700.woff2) format('woff2');
+	/*src: url(/interstate-condensed-700.woff2) format('woff2');*/
+	src: url(/InterstateBoldCompressed.woff) format('woff');
 }
 
 @import 'tailwindcss';
