--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,8 +4,8 @@ import NavElTiempo from '@/components/NavElTiempo.astro'
 import Head from '@/components/Head.astro'
 import Footer from '@/components/Footer.astro'
 
-const metaTitle = 'El Tiempo'
-const metaDescription = ''
+const metaTitle = 'Experiencias 10/10: un verano con tu mejor versión'
+const metaDescription = 'Este verano, cada experiencia cuenta. Desde un showcooking con cocina de proximidad hasta un brindis al atardecer después de un baño en el mar. Vive momentos inolvidables junto a Ballantine’s y con un enfoque más consciente'
 ---
 
 <!doctype html>
