--- a/src/components/BlockInfo.astro
+++ b/src/components/BlockInfo.astro
@@ -13,18 +13,32 @@ const { id, banner, image, title, inverse } = Astro.props
 ---
 
 <section id={id} class="relative min-h-screen overflow-clip py-24">
-	<Image class="gsap-banner absolute top-0 left-0 size-full object-cover" src={banner} width={1920} alt="" format="avif" quality={50} />
-	<div class="relative">
-		<h2 class:list={['gsap-title font-display max-w-171 text-right text-5xl font-bold text-pretty uppercase md:text-7xl', inverse && 'ml-auto']}>{title}</h2>
+	<!-- Imagen de fondo con overlay -->
+	<div class="absolute inset-0">
+		<Image class="gsap-banner size-full object-cover" src={banner} width={1920} alt="" format="avif" quality={50} />
+		<div class="absolute inset-0 bg-black/50"></div>
+		<!-- Filtro negro -->
+	</div>
+
+	<!-- Contenido -->
+	<div class="relative z-10">
+		<h2 class:list={['gsap-title font-display mr-8 max-w-171 text-right text-5xl font-bold text-pretty uppercase md:text-7xl', inverse && 'ml-auto']}>
+			{title}
+		</h2>
 	</div>
 </section>
 
 <section class="flex min-h-screen items-center overflow-clip bg-blue-900 py-24">
 	<div class="container grid items-center gap-24 lg:grid-cols-2">
-		<div class="overflow-clip">
-			<Image class="gsap-image" src={image} width={744} densities={[2]} alt="" format="avif" quality={50} />
+		<!-- Imagen lateral con overlay -->
+		<div class="relative overflow-clip">
+			<Image class="gsap-image w-full object-cover" src={image} width={744} densities={[2]} alt="" format="avif" quality={50} />
+			<div class="absolute inset-0 bg-black/50"></div>
+			<!-- Filtro negro -->
 		</div>
-		<div class:list={['gsap-text', inverse && '-order-1']}>
+
+		<!-- Texto -->
+		<div class:list={['gsap-text relative z-10', inverse && '-order-1']}>
 			<h3 class="font-display max-w-86 text-right text-4xl font-bold uppercase">{title}</h3>
 			<div class="mt-6 grid gap-6 md:pl-24">
 				<slot />
