--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const sections = [
 	<BlockHero {sections} />
 
 	<section class="overflow-clip bg-blue-950 py-24">
-		<div class="gsap-text container grid max-w-xl gap-6">
+		<div class="gsap-text container mb-24 grid max-w-xl gap-6">
 			<p>La vida es demasiado corta para no probar cosas nuevas. Es cierto que las personas somos seres de costumbres, pero también nos mueve la inquietud. Si lo piensas, ¡solo los valientes que se atreven a abrir nuevos caminos disfrutan primero de <strong>ese verdadero placer que supone vivir experiencias únicas e inolvidables!</strong> El resto viene después. Lo que está claro es que, si la idea la sacas de un reel, casi seguro estará ya masificada para cuando quieras llevar a cabo tú el plan…</p>
 			<p>De todas las estaciones del año, el verano es el mejor momento para ser tu mejor versión. En verano somos más libres, nos sentimos más ligeros. ¿Cuál es el auténtico reto? Lograr probar nuevas opciones pero manteniéndonos <strong>fieles a nosotros mismos.</strong></p>
 			<p>
@@ -55,7 +55,13 @@ const sections = [
 			sections[0].active && (
 				<BlockInfo id="section-1" banner={imgBanner01} image={imgPicture01} title="Dormir bajo las estrellas en el desierto de Tabernas">
 					<p>No hace falta irse a Marruecos para vivir una noche en el desierto. En Tabernas, el único desierto de Europa, puedes dormir al raso sobre una esterilla o en una tienda glamping entre formaciones rocosas y cielos completamente despejados. Sin cobertura, sin distracciones. Solo tú, el silencio y una inmensidad que te recuerda lo pequeño (y a la vez grande) que eres.</p>
-					<p>Una esterilla, una hoguera, un cielo estrellado sin filtros. La noche se vuelve mágica cuando desconectas del mundo y conectas contigo. En ese momento de calma absoluta, un Ballantine’s & Ginger Ale entre amigos sabe todavía mejor. Porque no hay nada más auténtico que brindar en medio de la nada.</p>
+					<p>
+						Una esterilla, una hoguera, un cielo estrellado sin filtros. La noche se vuelve mágica cuando desconectas del mundo y conectas contigo. En ese momento de calma absoluta, un{' '}
+						<a target="_blank" class="underline" rel="sponsored" href="https://www.ballantines.com/es-es/bebidas/ballantines-ginger-ale/">
+							Ballantine’s & Ginger Ale
+						</a>{' '}
+						entre amigos sabe todavía mejor. Porque no hay nada más auténtico que brindar en medio de la nada.
+					</p>
 				</BlockInfo>
 			)
 		}
@@ -64,7 +70,13 @@ const sections = [
 			sections[1].active && (
 				<BlockInfo id="section-2" banner={imgBanner02} image={imgPicture02} title="Road trip musical por la costa gallega" inverse>
 					<p>¿Y si tu verano tiene banda sonora? Elige una playlist, sube a tu coche y recorre la Costa da Morte, parando en faros solitarios, pequeñas playas escondidas y pueblos marineros donde el pulpo sabe diferente. Un viaje de carretera que se adapta a ti, con conciertos improvisados al borde del acantilado y noches con sabor a salitre.</p>
-					<p>Parar en un camping /casa /hotel en una cala vacía al terminar el día, sacar los altavoces y preparar un brindis con Ballantine’s mientras ves romper las olas. Porque todo viaje se merece una pausa con sabor. Porque tú decides el ritmo y cómo celebrarlo.</p>
+					<p>
+						Parar en un camping /casa /hotel en una cala vacía al terminar el día, sacar los altavoces y preparar un brindis con{' '}
+						<a target="_blank" rel="sponsored" class="underline" href="https://www.ballantines.com/es-es/bebidas/">
+							Ballantine’s
+						</a>{' '}
+						mientras ves romper las olas. Porque todo viaje se merece una pausa con sabor. Porque tú decides el ritmo y cómo celebrarlo.
+					</p>
 				</BlockInfo>
 			)
 		}
@@ -73,7 +85,13 @@ const sections = [
 			sections[2].active && (
 				<BlockInfo id="section-3" banner={imgBanner03} image={imgPicture03} title="Ruta en tren vintage por la Serra de Tramuntana">
 					<p>El tren de Sóller es más que un medio de transporte: es una cápsula del tiempo que cruza naranjales, túneles y valles con el ritmo lento de otro siglo. Con su madera antigua y su traqueteo nostálgico, es un viaje de los que no se hacen por necesidad, sino por placer. Un viaje que invita a observar sin prisa, a hablar más despacio, a dejar que el paisaje lo diga todo. Al llegar al puerto de Sóller, el mar te recibe como una postal en movimiento.</p>
-					<p>Ese es el momento perfecto para abrir tu mochila, sacar algo de picar y brindar con un Ballantine’s & Soda. Fresco, sencillo, honesto. Porque la magia de este plan no está en lo espectacular, sino en lo bien elegido. Tú decides cómo convertir un simple trayecto en un recuerdo imborrable. A veces, lo más simple se convierte en leyenda cuando lo haces a tu manera.</p>
+					<p>
+						Ese es el momento perfecto para abrir tu mochila, sacar algo de picar y brindar con un{' '}
+						<a class="underline" rel="sponsored" target="_blank" href="https://www.ballantines.com/es-es/bebidas/">
+							Ballantine’s & Soda
+						</a>
+						. Fresco, sencillo, honesto. Porque la magia de este plan no está en lo espectacular, sino en lo bien elegido. Tú decides cómo convertir un simple trayecto en un recuerdo imborrable. A veces, lo más simple se convierte en leyenda cuando lo haces a tu manera.
+					</p>
 				</BlockInfo>
 			)
 		}
@@ -82,7 +100,13 @@ const sections = [
 			sections[3].active && (
 				<BlockInfo id="section-4" banner={imgBanner04} image={imgPicture04} title="Festival de cine disfrutando del cielo de Madrid" inverse>
 					<p>En Madrid, cuando cae el sol, los tejados cobran vida. Hay ciclos de cine independiente, catas sensoriales, DJ sets tranquilos. Elige una de esas azoteas menos conocidas, donde puedes ver una película con vistas al skyline mientras brindas con tu mejor versión. Perfecto para una noche urbana pero diferente.</p>
-					<p>Luces tenues, cine indie, el skyline de fondo. Una noche diferente para celebrar lo inesperado. ¿Y si le sumas una copa de Ballantine’s con hielo mientras comentas la peli? Elegancia urbana, autenticidad en cada sorbo. Porque tu verano también se merece momentos así.</p>
+					<p>
+						Luces tenues, cine indie, el skyline de fondo. Una noche diferente para celebrar lo inesperado. ¿Y si le sumas una copa de{' '}
+						<a class="underline" rel="sponsored" target="_blank" href="https://www.ballantines.com/es-es/bebidas/30-anos-con-hielo/">
+							Ballantine’s con hielo
+						</a>{' '}
+						mientras comentas la peli? Elegancia urbana, autenticidad en cada sorbo. Porque tu verano también se merece momentos así.
+					</p>
 				</BlockInfo>
 			)
 		}
