--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,7 +53,7 @@ const sections = [
 
 		{
 			sections[0].active && (
-				<BlockInfo id="section-1" hasOverlay={true} banner={imgBanner01} image={imgPicture01} title="Dormir bajo las estrellas en el desierto de Tabernas">
+				<BlockInfo id="section-1" banner={imgBanner01} image={imgPicture01} title="Dormir bajo las estrellas en el desierto de Tabernas">
 					<p>No hace falta irse a Marruecos para vivir una noche en el desierto. En Tabernas, el único desierto de Europa, puedes dormir al raso sobre una esterilla o en una tienda glamping entre formaciones rocosas y cielos completamente despejados. Sin cobertura, sin distracciones. Solo tú, el silencio y una inmensidad que te recuerda lo pequeño (y a la vez grande) que eres.</p>
 					<p>
 						Una esterilla, una hoguera, un cielo estrellado sin filtros. La noche se vuelve mágica cuando desconectas del mundo y conectas contigo. En ese momento de calma absoluta, un{' '}
@@ -68,7 +68,7 @@ const sections = [
 
 		{
 			sections[1].active && (
-				<BlockInfo id="section-2" hasOverlay={true} banner={imgBanner02} image={imgPicture02} title="Road trip musical por la costa gallega" inverse>
+				<BlockInfo id="section-2" banner={imgBanner02} image={imgPicture02} title="Road trip musical por la costa gallega" inverse>
 					<p>¿Y si tu verano tiene banda sonora? Elige una playlist, sube a tu coche y recorre la Costa da Morte, parando en faros solitarios, pequeñas playas escondidas y pueblos marineros donde el pulpo sabe diferente. Un viaje de carretera que se adapta a ti, con conciertos improvisados al borde del acantilado y noches con sabor a salitre.</p>
 					<p>
 						Parar en un camping /casa /hotel en una cala vacía al terminar el día, sacar los altavoces y preparar un brindis con{' '}
@@ -83,7 +83,7 @@ const sections = [
 
 		{
 			sections[2].active && (
-				<BlockInfo id="section-3" hasOverlay={true} banner={imgBanner03} image={imgPicture03} title="Ruta en tren vintage por la Serra de Tramuntana">
+				<BlockInfo id="section-3" banner={imgBanner03} image={imgPicture03} title="Ruta en tren vintage por la Serra de Tramuntana">
 					<p>El tren de Sóller es más que un medio de transporte: es una cápsula del tiempo que cruza naranjales, túneles y valles con el ritmo lento de otro siglo. Con su madera antigua y su traqueteo nostálgico, es un viaje de los que no se hacen por necesidad, sino por placer. Un viaje que invita a observar sin prisa, a hablar más despacio, a dejar que el paisaje lo diga todo. Al llegar al puerto de Sóller, el mar te recibe como una postal en movimiento.</p>
 					<p>
 						Ese es el momento perfecto para abrir tu mochila, sacar algo de picar y brindar con un{' '}
